--- a/playbooks/tasks/packages/Ubuntu/docker.yml
+++ b/playbooks/tasks/packages/Ubuntu/docker.yml
@@ -24,7 +24,7 @@
   get_url:
     url: "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-Linux-x86_64"
     dest: "/usr/local/bin/docker-compose"
-    mode: 0755
+    mode: "755"
 - name: "Add Ansible user to 'docker' group"
   user:
     name: "{{ansible_user}}"
