--- a/playbooks/roles/home.pshendry.com/vars/main.yml
+++ b/playbooks/roles/home.pshendry.com/vars/main.yml
@@ -17,6 +17,8 @@ host_config_dir: "/data/services/config"
 # Directory for service data
 host_data_dir: "/data/services/data"
 
+host_media_dir: "/nas/media"
+
 namecheap_dyndns_password_ijj_li: !vault |
   $ANSIBLE_VAULT;1.1;AES256
   30316562626631396562373966316138313937336466333061633464306362613235373165306634
