--- a/playbooks/roles/home.pshendry.com/templates/transmission/settings.json
+++ b/playbooks/roles/home.pshendry.com/templates/transmission/settings.json
@@ -12,7 +12,7 @@
   "blocklist-url": "http://list.iblocklist.com/?list=gyisgnzbhppbvsphucsw&fileformat=p2p&archiveformat=gz",
   "cache-size-mb": 4,
   "dht-enabled": true,
-  "download-dir": "/nas/media/Torrents/Completed",
+  "download-dir": "{{host_media_dir}}/Torrents/Completed",
   "download-limit": 100,
   "download-limit-enabled": 0,
   "download-queue-enabled": true,
@@ -20,7 +20,7 @@
   "encryption": 2,
   "idle-seeding-limit": 30,
   "idle-seeding-limit-enabled": false,
-  "incomplete-dir": "/nas/media/Torrents/In Progress",
+  "incomplete-dir": "{{host_media_dir}}/Torrents/In Progress",
   "incomplete-dir-enabled": true,
   "lpd-enabled": false,
   "max-peers-global": 200,
@@ -43,17 +43,17 @@
   "ratio-limit": 2,
   "ratio-limit-enabled": true,
   "rename-partial-files": true,
-  "rpc-authentication-required": false,
+  "rpc-authentication-required": true,
   "rpc-bind-address": "0.0.0.0",
   "rpc-enabled": true,
   "rpc-host-whitelist": "",
-  "rpc-host-whitelist-enabled": true,
-  "rpc-password": "{31c0b8128e1403b2b58308f07fc1093c66f030ecDLdHCbAS",
+  "rpc-host-whitelist-enabled": false,
+  "rpc-password": "{7f22f0bedc7cc765607e9ad24082a5824f2259feRF7t/IMH",
   "rpc-port": 9091,
   "rpc-url": "/transmission/",
   "rpc-username": "transmission",
-  "rpc-whitelist": "127.0.0.1",
-  "rpc-whitelist-enabled": false,
+  "rpc-whitelist": "192.168.1.*",
+  "rpc-whitelist-enabled": true,
   "scrape-paused-torrents-enabled": true,
   "script-torrent-done-enabled": false,
   "script-torrent-done-filename": "",
@@ -70,6 +70,6 @@
   "upload-limit-enabled": 0,
   "upload-slots-per-torrent": 14,
   "utp-enabled": true,
-  "watch-dir": "/nas/media/Torrents/Watch",
+  "watch-dir": "{{host_media_dir}}/Torrents/Watch",
   "watch-dir-enabeld": false
 }
